--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   cupertino_icons: ^1.0.8
   cached_network_image: ^3.4.1
   flutter_bloc: ^9.1.1
+  dio: ^5.9.0
+  logger: ^2.6.2
+  elegant_notification: ^2.5.1
+  get_storage: ^2.1.1
+  flutter_screenutil: ^5.9.3
+  get: ^4.7.3
 
 dev_dependencies:
   flutter_test:
