--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get_storage: ^2.1.1
   flutter_screenutil: ^5.9.3
   get: ^4.7.3
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
